--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Monthly expenditure tacker
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,9 +12,11 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_launcher_icons: ^0.7.2
   firebase_core: ^0.4.0 #For firebase database
-  firebase_database: ^3.0.3 #For firebase database
+  cloud_firestore: ^0.12.9+4 #For firebase database
   firebase_auth: ^0.11.1+7 #firebase Authentication
   shared_preferences: ^0.5.3+1 #for local storage
+  intl: ^0.16.0
+  flutter_datetime_picker: ^1.2.6
 
 dev_dependencies:
   flutter_test:
