--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.16.0
   flutter_datetime_picker: ^1.2.6
   fluttertoast: ^3.1.3
+  package_info: ^0.4.0+13
 
 dev_dependencies:
   flutter_test:
