--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_datetime_picker: ^1.2.6
   fluttertoast: ^3.1.3
   package_info: ^0.4.0+13
+  image_picker: ^0.6.2+3
+
 
 dev_dependencies:
   flutter_test:
