--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   fluttertoast: ^3.1.3
   package_info: ^0.4.0+13
   image_picker: ^0.6.2+3
+  http: ^0.12.0+2
 
 
 dev_dependencies:
