--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   package_info: ^0.4.0+13
   image_picker: ^0.6.2+3
   http: ^0.12.0+2
+  charts_flutter: ^0.8.1
 
 
 dev_dependencies:
