--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^0.6.2+3
   http: ^0.12.0+2
   charts_flutter: ^0.8.1
+  flutter_svg: ^0.15.0
 
 
 dev_dependencies:
