--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   image_picker: ^0.6.2+3
   http: ^0.12.0+2
   charts_flutter: ^0.8.1
-  flutter_svg: ^0.15.0
+  flutter_svg: ^0.17.4
+  cloud_firestore: ^0.13.5
 
 
 dev_dependencies:
